; ModuleID = '/home/carl/AnghaBench/kphp-kdb/queue/extr_queue-data.c_alloc_subscribers.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/queue/extr_queue-data.c_alloc_subscribers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@subscribers_cnt = common dso_local global i32 0, align 4
@subscribers_memory = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @alloc_subscribers() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @subscribers_cnt, align 4
  %3 = add nsw i32 %2, 1
  store i32 %3, i32* @subscribers_cnt, align 4
  %4 = call i64 (...) @dl_get_memory_used()
  %5 = load i32, i32* @subscribers_memory, align 4
  %6 = sext i32 %5 to i64
  %7 = sub nsw i64 %6, %4
  %8 = trunc i64 %7 to i32
  store i32 %8, i32* @subscribers_memory, align 4
  %9 = call i32* @dl_malloc0(i32 4)
  store i32* %9, i32** %1, align 8
  %10 = call i64 (...) @dl_get_memory_used()
  %11 = load i32, i32* @subscribers_memory, align 4
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %12, %10
  %14 = trunc i64 %13 to i32
  store i32 %14, i32* @subscribers_memory, align 4
  %15 = load i32*, i32** %1, align 8
  ret i32* %15
}

declare dso_local i64 @dl_get_memory_used(...) #1

declare dso_local i32* @dl_malloc0(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
